# libjpeg-turbo-android

./: gen_jni.sh
TessCompileTest/: AndroidManifest.xml
TessCompileTest/cmake-build/: CMakeLists.txt
TessCompileTest/jni/: Android.mk  Application.mk
TessCompileTest/jni/libjpeg/: Android.mk  jmorecfg.h
TessCompileTest/jni/libpng/: pngpriv.h
app/: build.gradle
app/src/androidTest/java/com/example/mark/libjpeg_turbo_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  imageproc.cpp  imageproc.h  native-lib.cpp  temp.h
app/src/main/cpp/include/libjpeg-turbo/: config.h  jconfigint.h
app/src/main/java/com/example/mark/libjpeg_turbo_demo/: MainActivity.java
app/src/main/java/com/xgn/: ImageUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mark/libjpeg_turbo_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libjpeg-turbo-1.5.2/: arm64.sh  armv7a.sh
